--- a/web.xml
+++ b/web.xml
@@ -20,4 +20,5 @@
     <filter-name>struts2</filter-name>
     <url-pattern>*.action</url-pattern>
   </filter-mapping>
+         cadvdsw43y5y54
 </web-app>
